@@ -5,6 +5,10 @@
   fails to get inited by other means. This fixes a case of when the c-ares
   init fails when internet access is fone.
 
+- Timo Teras changed the reason code used in the resolve callback done when
+  ares_cancel() is used, to be ARES_ECANCELLED instead of ARES_ETIMEOUT to
+  better allow the callback to know what's happening.
+
 * 14 Jul 2009 (Guenter Knauf)
 - renamed generated config.h to ares_config.h to avoid any future clashes
   with config.h from other projects.
